# hydrofoil-data

./: .gitignore  README.md  pyproject.toml
configs/: sweep_config.yaml
hydrofoil_data/: __init__.py  cli.py  get_nf_airfoils.py  postprocess.py  shapes.py  sweep.py
hydrofoil_data/solvers/: __init__.py  neuralfoil_solver.py  xfoil_solver.py
tests/: test_solvers.py
