[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydrofoil-data"
version = "0.1.0"
description = "Multifidelity aerodynamic data for NACA hydrofoil profiles"
requires-python = ">=3.11"
dependencies = [
    "neuralfoil>=0.3.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "h5py>=3.9",
    "pyyaml>=6.0",
    "xarray>=2024.1",
    "netCDF4>=1.6",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov"]

[project.scripts]
hfdata = "hydrofoil_data.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["hydrofoil_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
